--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         <div class="btns">
           <button class="cancel-btn">Cancel</button>
           <button class="add-btn">Add</button>
+          <button class="Display-btn">Display Users</button>
         </div>
       </div>
     </div>
