--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
         <div class="btns">
           <button class="cancel-btn">Cancel</button>
           <button class="add-btn">Add</button>
-          <button class="Display-btn">Display Users</button>
         </div>
       </div>
     </div>
 
     <script src="script.js"></script>
+    <script src="database.js"></script>
   </body>
 </html>
